--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-#MAIL_MAILER=smtp
-MAIL_MAILER=sendmail
+MAIL_MAILER=smtp
+#MAIL_MAILER=sendmail
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=aa8403997@gmail.com
