--- a/.env
+++ b/.env
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=sendmail
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=aa8403997@gmail.com
-MAIL_PASSWORD=vprabtxvtqqyiyyx
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=aa8403997@gmail.com
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
